--- a/tests/index.html
+++ b/tests/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 <p>Check the console for test results</p>
-<script src="../resemble.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/chai/3.4.1/chai.js"></script>
+<script src="../src/index.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/chai/4.0.2/chai.min.js"></script>
 <script src="main_spec.js"></script>
 </body>
 </html>
